WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188786
[GStreamer] Extra ASSERTs at MainThreadNotifier
https://bugs.webkit.org/show_bug.cgi?id=188786
Summary
[GStreamer] Extra ASSERTs at MainThreadNotifier
Xabier Rodríguez Calvar
Reported
2018-08-21 05:08:09 PDT
[GStreamer] Extra ASSERTs at MainThreadNotifier
Attachments
Patch
(1.75 KB, patch)
2018-08-21 05:10 PDT
,
Xabier Rodríguez Calvar
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.76 KB, patch)
2018-09-06 03:11 PDT
,
Xabier Rodríguez Calvar
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2018-08-21 05:10:07 PDT
Created
attachment 347630
[details]
Patch It looks like the MainThread notifier could have these two extra checks in debug mode.
EWS Watchlist
Comment 2
2018-08-21 05:11:29 PDT
Attachment 347630
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:9: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] ERROR: Source/WebCore/ChangeLog:10: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xabier Rodríguez Calvar
Comment 3
2018-08-21 05:12:23 PDT
(In reply to Build Bot from
comment #2
)
> ERROR: Source/WebCore/ChangeLog:9: Need whitespace between colon and > description [changelog/filechangedescriptionwhitespace] [5] > ERROR: Source/WebCore/ChangeLog:10: Need whitespace between colon and > description [changelog/filechangedescriptionwhitespace] [5] > Total errors found: 2 in 2 files
Weird, local check said nothing...
Xabier Rodríguez Calvar
Comment 4
2018-09-06 03:11:39 PDT
Created
attachment 349012
[details]
Patch for landing
Xabier Rodríguez Calvar
Comment 5
2018-09-06 03:12:53 PDT
(In reply to Xabier Rodríguez Calvar from
comment #3
)
> (In reply to Build Bot from
comment #2
) > > ERROR: Source/WebCore/ChangeLog:9: Need whitespace between colon and > > description [changelog/filechangedescriptionwhitespace] [5] > > ERROR: Source/WebCore/ChangeLog:10: Need whitespace between colon and > > description [changelog/filechangedescriptionwhitespace] [5] > > Total errors found: 2 in 2 files > > Weird, local check said nothing...
Because style checks are done before opening the changelogs.
WebKit Commit Bot
Comment 6
2018-09-06 03:50:48 PDT
Comment on
attachment 349012
[details]
Patch for landing Clearing flags on attachment: 349012 Committed
r235732
: <
https://trac.webkit.org/changeset/235732
>
WebKit Commit Bot
Comment 7
2018-09-06 03:50:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-09-06 03:51:32 PDT
<
rdar://problem/44176399
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug