[GStreamer] Extra ASSERTs at MainThreadNotifier https://bugs.webkit.org/show_bug.cgi?id=188786

Reviewed by Carlos Garcia Campos.

We add a couple of checks in debug mode: there is only one bit on
per notification and ensure a notifier was invalidated before
being destroyed.

* platform/graphics/gstreamer/MainThreadNotifier.h:


Canonical link: https://commits.webkit.org/204342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235732 268f45cc-cd09-0410-ab3c-d52691b4dbfc